src/objects/Sales_Region__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_RDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Alternate RDM. Several Sales Regions required the need for more than one RDM, per Region.</description>
        <label>Alternate RDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Regions_Alt_RDM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Baseline_Target__c</fullName>
        <label>Baseline Target</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RBD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The RBD for this sales region</description>
        <label>RBD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The RDM. Will be used to determine if this user should be able to view the region (RDM) compensation details on the Sales Dashboard.</description>
        <label>RDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area</label>
        <referenceTo>Sales_Area__c</referenceTo>
        <relationshipLabel>Sales Regions</relationshipLabel>
        <relationshipName>Sales_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier_1_Bonus_Payout__c</fullName>
        <label>Tier 1 Bonus Payout</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Bonus_Payout__c</fullName>
        <label>Tier 2 Bonus Payout</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3_Bonus_Payout__c</fullName>
        <label>Tier 3 Bonus Payout</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Sales Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Area__c</columns>
        <columns>RBD__c</columns>
        <columns>RSM__c</columns>
        <columns>Baseline_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>